(feat) slog BADKEY -> GOODKEY

--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -14,7 +14,7 @@
         type="text"
         x-model="input.query"
         @keyup="submit"
-        class="block font-mono w-full p-3 ps-32 text-sm text-slate-300 hover:text-slate-200 border-2 border-gray-600 hover:border-green-700 focus:border-green-500 rounded-lg bg-gray-900 focus:outline-none"
+        class="block font-mono font-bold w-full p-2.5 ps-32 text-sm text-slate-300 hover:text-slate-200 border-2 border-gray-600 hover:border-green-700 focus:border-green-500 rounded-lg bg-gray-900 focus:outline-none"
         placeholder=".*"
       />
       <span
@@ -45,7 +45,7 @@
         type="text"
         x-model="input.ignore"
         @keyup="submit"
-        class="block font-mono w-full p-3 ps-32 text-sm text-slate-300 hover:text-slate-100 border-2 border-gray-600 hover:border-rose-700 focus:border-rose-500 rounded-lg bg-gray-900 focus:outline-none"
+        class="block font-mono font-bold w-full p-2.5 ps-32 text-sm text-slate-300 hover:text-slate-100 border-2 border-gray-600 hover:border-rose-700 focus:border-rose-500 rounded-lg bg-gray-900 focus:outline-none"
         placeholder=""
       />
     </div>
