--- a/frontend/src/components/Nav.astro
+++ b/frontend/src/components/Nav.astro
@@ -10,6 +10,7 @@ import octocat from '@assets/octocat.svg?raw'
         <span class="pt-1 pl-1 font-mono">Log Viewer</span>
       </a>
 
+
       <div class="flex w-1/2 justify-end content-center">
         <a class="inline-block text-blue-300 no-underline hover:text-pink-500 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300 ease-in-out" href="https://github.com/kevincobain2000/gol">
 
@@ -18,6 +19,9 @@ import octocat from '@assets/octocat.svg?raw'
         </a>
       </div>
     </div>
+    <span class="text-gray-500">
+        Docker, ssh remote, pipe and local logs in one place
+    </span>
   </div>
 <style>
 
