--- a/frontend/src/components/Viewer.astro
+++ b/frontend/src/components/Viewer.astro
@@ -30,6 +30,7 @@ const baseURL = import.meta.env.PUBLIC_BASE_URL;
     type: "",
     page: 1,
     per_page: 100,
+    drop_down_search_file: false,
   });
   let highlighter = Alpine.reactive({
     line_from: 0,
