(embed) the tool can be embedded in existing GO application publishes dist folder as part of embed provides interface main moved to frontend/main.go for CLI

--- a/frontend/src/components/Nav.astro
+++ b/frontend/src/components/Nav.astro
@@ -6,8 +6,8 @@ import octocat from '@assets/octocat.svg?raw'
     <div class="w-full flex items-center justify-between">
 
       <a class="flex items-center text-gray-200 no-underline hover:no-underline font-bold text-4xl" href="/">
+        <span class="pt-1 pr-1 font-mono">Log Viewer</span>
         <img src="/favicon.ico" alt="" width="35">
-        <span class="pt-1 pl-1 font-mono">Log Viewer</span>
       </a>
 
 
