(deps) log level as option, and unpkg dep removed for security

--- a/frontend/src/components/Viewer.astro
+++ b/frontend/src/components/Viewer.astro
@@ -2,6 +2,7 @@
 import Inputs from "@components/partials/viewer/Inputs.astro";
 import Table from "@components/partials/viewer/Table.astro";
 import JS from "@components/JS.astro";
+import Alpine from "@components/Alpine.astro";
 ---
 
 <div class="mx-auto" id="data">
@@ -9,12 +10,16 @@ import JS from "@components/JS.astro";
   <Table />
 </div>
 
-<script is:inline src="//unpkg.com/alpinejs@3.0.7/dist/cdn.js"></script>
+<Alpine />
 <JS />
 
 <script is:inline>
   const currentURL = new URL(window.location.href);
   let baseURL = currentURL.origin + currentURL.pathname;
+  // check if currentURL is 4321 then use http://localhost:3003 for baseURL (for local development)
+  if (currentURL.port === "4321") {
+    baseURL = "http://localhost:3003"
+  }
   baseURL = baseURL.startsWith("http") ? baseURL : currentURL + baseURL;
   // remove trailing slash
   baseURL = baseURL.replace(/\/$/, "");
@@ -89,7 +94,6 @@ import JS from "@components/JS.astro";
         res.result.lines.length > 0 ? res.result.lines[0].line_number : 0;
     }
     setTimeout(() => {
-      // keep the filter
       if (input.query_file === "") {
         results.file_paths = res.file_paths;
       }
