--- a/frontend/src/components/Nav.astro
+++ b/frontend/src/components/Nav.astro
@@ -2,7 +2,7 @@
 import octocat from '@assets/octocat.svg?raw'
 ---
 
-<div class="w-full container mx-auto">
+<div class="w-full container">
     <div class="w-full flex items-center justify-between">
 
       <a class="flex items-center text-gray-200 no-underline hover:no-underline font-bold text-4xl" href="/">
@@ -12,8 +12,7 @@ import octocat from '@assets/octocat.svg?raw'
 
 
       <div class="flex w-1/2 justify-end content-center">
-        <a class="inline-block text-blue-300 no-underline hover:text-pink-500 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300 ease-in-out" href="https://github.com/kevincobain2000/gol">
-
+        <a class="inline-block text-blue-300 no-underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300 ease-in-out" href="https://github.com/kevincobain2000/gol">
             <Fragment set:html={octocat} />
         </a>
         </a>
