--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -13,7 +13,7 @@
       <input
         type="text"
         x-model="input.query"
-        @keyup="submit"
+        @input.debounce.500ms="submit"
         class="block font-mono font-bold w-full p-3 ps-32 text-sm text-slate-300 hover:text-slate-200 border-gray-600 rounded-lg bg-gray-900 focus:outline-none"
         placeholder=".*"
       />
@@ -45,7 +45,7 @@
       <input
         type="text"
         x-model="input.ignore"
-        @keyup="submit"
+        @input.debounce.500ms="submit"
         class="block font-mono font-bold w-full p-3 ps-32 text-sm text-slate-300 hover:text-slate-100 border-gray-600 rounded-lg bg-gray-900 focus:outline-none"
         placeholder=""
       />
